k8s/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: cotd-api
spec:
  selector:
    matchLabels:
      app: cotd-api
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: cotd-api
    spec:
      containers:
        - name: cotd-api
          image: fruetel/cotd-api:latest
          ports:
            - containerPort: 8080
