k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cotd-api
spec:
  selector:
    app: cotd-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
