k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cotd-api
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - api.countryoftheday.com
      secretName: letsencrypt-prod
  rules:
    - host: "api.countryoftheday.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: cotd-api
              servicePort: 80
